Add async utils from antsibull-core (#1)
* Add more utils from antsibull-core.

* Improve documentation; return copy/write status; add tests for io.

* Remove asynctest test dependency.

Co-authored-by: Maxwell G <maxwell@gtmx.me>

---------

Co-authored-by: Maxwell G <maxwell@gtmx.me>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
+    "aiofiles",
     "PyYAML",
 ]
 
@@ -65,11 +66,13 @@ formatters = [
 ]
 test = [
     "pytest",
+    "pytest-asyncio >= 0.20",
     "pytest-cov",
     "pytest-error-for-skips",
 ]
 typing = [
     "mypy",
+    "types-aiofiles",
     "types-PyYAML",
     "typing-extensions",
 ]
