--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -1,3 +1,9 @@
 ---
 ancestor: null
-releases: {}
+releases:
+  1.0.0:
+    changes:
+      release_summary: Initial release.
+    fragments:
+      - 1.0.0.yml
+    release_date: '2024-09-09'
