--- a/changelogs/fragments/6-collection-copier-strpath.yml
+++ b/changelogs/fragments/6-collection-copier-strpath.yml
@@ -1,2 +1,2 @@
 bugfixes:
-  - "``CollectionCopier``'s ``source_directory`` argument did not accept ``pathlib.Path`` (https://github.com/ansible-community/antsibull-fileutils/pull/6)."
+  - "``CollectionCopier``'s ``source_directory`` argument now accepts ``pathlib.Path`` objects in addition to ``str``s (https://github.com/ansible-community/antsibull-fileutils/pull/6)."
