--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -17,3 +17,23 @@ releases:
       - 1.0.1.yml
       - 5-io-print.yml
     release_date: '2024-09-13'
+  1.1.0:
+    changes:
+      bugfixes:
+        - '``CollectionCopier``''s ``source_directory`` argument now accepts ``pathlib.Path``
+          objects in addition to ``str`` s (https://github.com/ansible-community/antsibull-fileutils/pull/6).'
+      minor_changes:
+        - Declare support for Python 3.13 (https://github.com/ansible-community/antsibull-fileutils/pull/10).
+        - 'Rewrite ``Copier`` and ``GitCopier`` so that both symlinks outside the
+          tree and symlinks inside the tree are handled more correctly: symlinks inside
+          the tree are kept, while for symlinks outside the tree the content is copied.
+          Symlinks are normalized by default, which makes this behavior similar to
+          ansible-core''s behavior in ``ansible-galaxy collection build``. Also copying
+          now tries to preserve metadata (https://github.com/ansible-community/antsibull-fileutils/pull/8).'
+      release_summary: Bugfix and feature release.
+    fragments:
+      - 1.1.0.yml
+      - 6-collection-copier-strpath.yml
+      - 8-copier.yml
+      - python-3.13.yml
+    release_date: '2024-10-22'
