--- a/.github/workflows/nox.yml
+++ b/.github/workflows/nox.yml
@@ -47,6 +47,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: antsibull-fileutils
+          persist-credentials: false
       - name: Install extra packages
         if: "matrix.packages != ''"
         run: |
