--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -60,3 +60,13 @@ releases:
       - 1.3.0.yml
       - 17-tempfile.yml
     release_date: '2025-06-17'
+  1.4.0:
+    changes:
+      minor_changes:
+        - Extend ``tempfile`` module to make it easier to find customized temporary
+          directories (https://github.com/ansible-community/antsibull-fileutils/pull/18).
+      release_summary: Feature release.
+    fragments:
+      - 1.4.0.yml
+      - 18-tempfile.yml
+    release_date: '2025-07-22'
